@@ -13,18 +13,26 @@ namespace NameServer
         /// <summary>
         /// Initializes a new instance of the <see cref="FileSystemEntry"/> class.
         /// </summary>
+        /// <param name="parent">The parent of the entry. May be <see langword="null" />.</param>
         /// <param name="name">The name of the new entry.</param>
         /// <param name="dateCreated">The date the new entry was created.</param>
         /// <exception cref="ArgumentNullException"><paramref name="name"/> is <see langword="null" />.</exception>
-        /// <exception cref="ArgumentException"><paramref name="name"/> is an empty string.</exception>
-        public FileSystemEntry(string name, DateTime dateCreated)
+        /// <exception cref="ArgumentException"><paramref name="name"/> contains the / character.</exception>
+        public FileSystemEntry(Directory parent, string name, DateTime dateCreated)
         {
             if( name == null )
                 throw new ArgumentNullException("name");
-            if( name.Length == 0 )
+            if( name.Contains(FileSystem.DirectorySeparator) )
                 throw new ArgumentException("Empty file or directory names are not allowed.", "name");
+
             Name = name;
             DateCreated = dateCreated;
+
+            if( parent != null )
+            {
+                parent.Children.Add(this);
+                Parent = parent;
+            }
         }
 
         /// <summary>
@@ -33,8 +41,41 @@ namespace NameServer
         public string Name { get; set; }
 
         /// <summary>
-        /// Gets or sets the date and time the file system entry was created.
+        /// Gets the date and time the file system entry was created.
         /// </summary>
         public DateTime DateCreated { get; private set; }
+
+        /// <summary>
+        /// Gets the parent directory of the file system entry.
+        /// </summary>
+        public Directory Parent { get; private set; }
+
+        /// <summary>
+        /// Gets the absolute path of the file system entry.
+        /// </summary>
+        public string FullPath
+        {
+            get
+            {
+                if( Parent == null )
+                    return FileSystem.DirectorySeparator.ToString();
+                else
+                {
+                    StringBuilder path = new StringBuilder();
+                    BuildPath(path);
+                    return path.ToString();
+                }
+            }
+        }
+
+        private void BuildPath(StringBuilder path)
+        {
+            if( Parent != null )
+            {
+                Parent.BuildPath(path);
+                path.Append(FileSystem.DirectorySeparator);
+                path.Append(Name);
+            }
+        }
     }
 }
