@@ -51,6 +51,7 @@
   <ItemGroup>
     <Compile Include="Directory.cs" />
     <Compile Include="File.cs" />
+    <Compile Include="FileSystem.cs" />
     <Compile Include="FileSystemEntry.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
