@@ -10,7 +10,7 @@ namespace NameServer
     /// </summary>
     class Program
     {
-        private static log4net.ILog _log = log4net.LogManager.GetLogger(typeof(Program));
+        private static readonly log4net.ILog _log = log4net.LogManager.GetLogger(typeof(Program));
 
         static void Main(string[] args)
         {
