@@ -2,3 +2,6 @@
 - Created FileSystemEntry, File and Directory classes to represent the file system namespace.
 - Added unit tests for those classes.
 - Set up preliminary log4net configuration.
+
+- Added Parent tracking to FileSystemEntry, and FullPath property.
+- Added FileSystem class, added CreateDirectory function (not yet tested).
